# docs

./: .gitignore  .gitreview  README.md  build-docs.sh  groups  project.config  setup.cfg  tox.ini
source/: conf.py  index.rst
source/_custom/: custom.css
source/_ext/: edit_on_github.py
source/_templates/: sourcelink.html
source/contributions/: contributions.rst
source/environments/: baremetal_env.rst  environments.rst  virtual_env.rst
source/getting_started/: getting_started.rst
source/glossary/: glossary.rst
source/installation/: installing.rst
source/introduction/: introduction.rst
source/troubleshooting/: failed_overcloud.rst  troubleshooting.rst
source/user_guide/: deployment.rst  flavors.rst  images.rst  nodes.rst  overcloud.rst  ready_states.rst  roles.rst  updates.rst  user_guide.rst
